hard-gists/5378938/run.log
=== Docker Run Log for 5378938 ===
Started at: Mi 29. Okt 15:37:49 CET 2025

[2025-10-29 15:37:50] START: Running container for 5378938
[2025-10-29 15:37:50] SUCCESS: Container 3a888c6e17e6b90c5f949ffda2fea5af0a4189397a6bc617427cf285bc900666 started for 5378938
=== Container logs for 5378938 ===
  File "/snippet.py", line 92
    print filename
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5378938 ===
[2025-10-29 15:37:52] INFO: Container 3a888c6e17e6b90c5f949ffda2fea5af0a4189397a6bc617427cf285bc900666 has stopped
